--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <script src="/fuentedesoda/assets/main.bundle.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
     <title>home</title>
 
 </head>
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen bg-slate-200">
 <main class="container flex-grow">
 
 
@@ -36,29 +38,49 @@
 
 <section>
 
-  <i class="fa-thin fa-baby-carriage"></i>
+<div class="relative">
+    <ul class="controls" id="customize-controls" aria-label="Carousel Navigation" tabindex="0">
+        <li class="prev" data-controls="prev" aria-controls="customize" tabindex="-1">
+            <i class="fas fa-angle-left fa-4x"></i>
+        </li>
+        <li class="next" data-controls="next" aria-controls="customize" tabindex="-1">
+            <i class="fas fa-angle-right fa-4x"></i>          
+        </li>
+    </ul>
+    <div class="my-slider shadow">
+        <div>
+            <img src="/fuentedesoda/assets/img/slider1.png" alt="" />
+        </div>
+        <div>
+          <img src="/fuentedesoda/assets/img/slider2.jpg"alt=""/>
+        </div>
+        <div>
+          <img src="/fuentedesoda/assets/img/slider3.jpg" alt=""/>
+        </div>
+      </div>
 
-  <ul class="controls" id="customize-controls" aria-label="Carousel Navigation" tabindex="0">
-    <li class="prev" data-controls="prev" aria-controls="customize" tabindex="-1">
-        <i class="fas fa-angle-left fa-4x"></i>
-    </li>
-    <li class="next" data-controls="next" aria-controls="customize" tabindex="-1">
-        <i class="fas fa-angle-right fa-4x"></i>          
-    </li>
-</ul>
+</div>
 
-  <div class="relative my-slider shadow">
-    <div>
-        <img src="/fuentedesoda/assets/img/slider1.png" alt="" />
-    </div>
-    <div>
-      <img src="/fuentedesoda/assets/img/slider2.jpg"alt=""/>
-    </div>
-    <div>
-      <img src="/fuentedesoda/assets/img/slider3.jpg" alt=""/>
-    </div>
-  </div>
+
+ 
 </section>
+
+
+  
+<a href="/fuentedesoda/pages/about/">Acerca de Nosotros</a>
+
+
+
+  
+<a href="/fuentedesoda/pages/team/">El equipo</a>
+
+
+
+  
+<a href="/fuentedesoda/pages/letter/">La Carta</a>
+
+
+
 
 <style>
 
@@ -87,9 +109,9 @@
         padding: 0;
         list-style: none;
         position: absolute;
-        left: 10%;
-        width: 80%;
-        top: 50%;
+        left: 5%;
+        width: 90%;
+        top: 45%;
         transform: translatey(-50%);
         display: flex;
         align-items: center;
