--- a/pages/letter/index.html
+++ b/pages/letter/index.html
@@ -17,21 +17,28 @@
 </head>
 <body class="flex flex-col min-h-screen bg-slate-200">
 <main class="container flex-grow">
-
-
-<ul class="nav-menu" id="primary-menu">
-  
-</ul> 
-
 <nav class="container flex justify-around py-8 mx-auto bg-teal-600">
   <div>
-    <h3 class="text-2xl font-medium text-blue-500">LOGO</h3>
+    <a href="/fuentedesoda/" class="uppecase"> LOGO </a>
   </div>
   <div class="space-x-8 text-white text-lg uppercase font-bold ">
-    <a href="">Inicio</a>
-    <a href="">Nuestro Equipo</a>
-    <a href="">La Carta</a>
-    <a href="">Contactanos</a>
+ 
+  
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/team/">Nuestro equipo</a>
+
+
+
+  
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/letter/">La Carta</a>
+
+
+
+  
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/contact/">Contactanos</a>
+
+
+
+
   </div>
 </nav>
 
