--- a/admin/auth/index.html
+++ b/admin/auth/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/fuentedesoda/assets/main.bundle.css">
+    <style></style>
 
     <script src="/fuentedesoda/assets/main.bundle.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
@@ -12,12 +13,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
+        <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,800" rel="stylesheet">
+
+
     <title>Dashboard Admin</title>
 
 </head>
 <body class="flex flex-col min-h-screen bg-slate-200">
 <main class="container flex-grow">
-<div class="shadow px-8 py-8 bg-lime-100">
 
 
   <div class='container'>
@@ -61,7 +64,6 @@
         </div>
     </div>
 
-</div>
 <script src="/fuentedesoda/assets/js/auth.js"></script>
 
 
