--- a/admin/signup/index.html
+++ b/admin/signup/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/fuentedesoda/assets/main.bundle.css">
+    <style></style>
 
     <script src="/fuentedesoda/assets/main.bundle.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
@@ -12,45 +13,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
-    <title>Nuestro equipo</title>
+        <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,800" rel="stylesheet">
+
+
+    <title>Dashboard Admin</title>
 
 </head>
 <body class="flex flex-col min-h-screen bg-slate-200">
 <main class="container flex-grow">
-<nav class="container flex justify-around py-8 mx-auto bg-teal-600">
-  <div>
-    <a href="/fuentedesoda/" class="uppecase"> LOGO </a>
-  </div>
-  <div class="space-x-8 text-white text-lg uppercase font-bold ">
- 
-  
-<a class="hover:text-amber-400" href="/fuentedesoda/pages/team/">Nuestro equipo</a>
-
-
-
-  
-<a class="hover:text-amber-400" href="/fuentedesoda/pages/letter/">La Carta</a>
-
-
-
-  
-<a class="hover:text-amber-400" href="/fuentedesoda/pages/contact/">Contactanos</a>
 
 
 
 
-  </div>
-</nav>
+<script src="/fuentedesoda/assets/js/auth.js"></script>
 
-<div class="shadow px-8 py-8 bg-lime-100">
-
-
-
-<footer>
-<p>Publicado en: Wed Feb 16 2022</p>
-</footer>
-
-</div>
 
 </main>    
 </body>
