--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/fuentedesoda/assets/main.bundle.css">
+    <style></style>
 
     <script src="/fuentedesoda/assets/main.bundle.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
@@ -12,30 +13,54 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
+        <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,800" rel="stylesheet">
+
+
     <title>home</title>
 
 </head>
 <body class="flex flex-col min-h-screen bg-slate-200">
 <main class="container flex-grow">
 
-<nav class="container flex justify-around py-8 mx-auto bg-teal-600">
+<nav class="container flex justify-around  mx-auto bg-teal-600 py-2">
   <div>
-    <a href="/fuentedesoda/" class="uppecase"> LOGO </a>
+    <a href="/fuentedesoda/">          <img style="width:100px" src="/fuentedesoda/assets/img/logo2.png" alt=""/>
+ </a>
   </div>
-  <div class="space-x-8 text-white text-lg uppercase font-bold ">
+  <div class="space-x-8 text-white text-lg uppercase font-bold py-8 ">
  
   
-<a class="hover:text-amber-400" href="/fuentedesoda/pages/team/">Nuestro equipo</a>
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/equipo/">Nuestro equipo</a>
 
 
 
   
-<a class="hover:text-amber-400" href="/fuentedesoda/pages/letter/">La Carta</a>
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/carta/">La Carta</a>
 
 
 
   
-<a class="hover:text-amber-400" href="/fuentedesoda/pages/contact/">Contactanos</a>
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/historia/">Historia</a>
+
+
+
+  
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/sucursales/">Sucursales</a>
+
+
+
+  
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/contacto/">Contacto</a>
+
+
+
+  
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/carta/producto/"></a>
+
+
+
+  
+<a class="hover:text-amber-400" href="/fuentedesoda/pages/login/">Ingresar</a>
 
 
 
